Improvements to types, error and status handling, components, api client and actions, add notification handling
