# application/server/src/queues/queue-actions.ts
@@ -1,9 +1,31 @@
-import { validationInvariant } from '../utils/joi-validation';
+import {
+    // JoiValidationError,
+    validationInvariant
+} from '../utils/joi-validation';
 
 const joi = require('joi');
 const errors = require('common-errors');
 
 import Queue from './queue-model';
+import { NotPermittedError } from '../utils/NotPermittedError';
+
+export interface IGetQueuesQueryResult extends Queue {
+    rooms_count: number;
+    tickets_count: number;
+}
+
+export const getQueues = (tenant: string): Promise<IGetQueuesQueryResult[]> => {
+    return Queue.query().context({ tenant })
+        .select([
+            'queues.*',
+            Queue.relatedQuery('rooms').context({ tenant }).count().as('rooms_count'),
+            Queue.relatedQuery('tickets').context({ tenant }).count().as('tickets_count'),
+        ])
+        // objectionjs thinks this is Queue[], and it is, but Queue is extended due to the select above
+        .then((queues: any) => {
+            return queues as IGetQueuesQueryResult[];
+        });
+};
 
 export const getQueueById = (tenant, id: number): Promise<Queue> => {
     return Queue.query().context({ tenant })
@@ -26,7 +48,14 @@ export const create = (tenant: string, name: string): Promise<Queue> => {
     validationInvariant({ name }, schema);
 
     return Queue.query().context({ tenant })
-        .insert({ name });
+        .insert({ name })
+        .catch((error: Error) => {
+            if (error instanceof Queue.errors.UniqueViolationError) {
+                throw new NotPermittedError('ALREADY-EXISTS', `Queue of name ${name} already exists.`);
+            }
+
+            throw error;
+        });
 };
 
 export const remove = (tenant: string, queueId: number): Promise<number> => {
